--- a/resume.qmd
+++ b/resume.qmd
@@ -6,7 +6,7 @@ subtitle: "my data science portfolio"
 
 # Title 1 Header
 
-<object data="http://yoursite.com/the.pdf" type="application/pdf" width="700px" height="700px">
+<object data="http://yoursite.com/the.pdf" type="application/pdf">
     <embed src="Andrew Leland - Resume.pdf">
         <p>This browser does not support PDFs. Please download the PDF to view it: <a href="http://yoursite.com/the.pdf">Download PDF</a>.</p>
     </embed>
