--- a/Project2.qmd
+++ b/Project2.qmd
@@ -44,13 +44,13 @@ import json
 #| label: project-data
 #| code-summary: Loading the json data and turning it into a dataframe
 
-f = open("flights_missing.json","r")
+df = pd.read_json("https://raw.githubusercontent.com/byuidatascience/data4missing/master/data-raw/flights_missing/flights_missing.json")
 
-x = json.load(f)
+# x = json.load(f)
 
-f.close()
+# f.close()
 
-df = pd.DataFrame(x)
+# df = pd.DataFrame(x)
 
 ```
 
